made chages to the /message route to truancate the post description

--- a/rentwyse-frontend/src/app/messaging/messages/messages.component.html
+++ b/rentwyse-frontend/src/app/messaging/messages/messages.component.html
@@ -189,9 +189,8 @@
               </div>
 
               <p class="listing-desc">
-                {{ selectedConversation.postId.description }}
+                {{ truncateDescription(selectedConversation.postId?.description) }}
               </p>
-
               <div class="listing-meta-grid">
                 <div class="meta-item">
                   <label>Listed</label>
